ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: hashicorp/http-echo
        args:
        - "-text=Hello, Ingress!"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web-app
  ports:
  - port: 80
    targetPort: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  labels:
    name: web-ingress
spec:
  rules:
  - host: local.ingress
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-service
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  labels:
    name: ingress-path
spec:
  rules:
  - host: local.ingress
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-service
            port: 
              number: 80
      
      - pathType: Prefix
        path: "/web1"
        backend:
          service:
            name: web-service
            port: 
              number: 80
      
      - pathType: Prefix
        path: "/web2"
        backend:
          service:
            name: web-service
            port: 
              number: 80
