ingress2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: hashicorp/http-echo
        ports:
        - containerPort: 5678
        args:
          - "-text=Hello, Ingress!"
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web-app
  ports:
  - port: 80
    targetPort: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/name: web-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: local.ingress
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-service
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/name: path-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: local.ingress
    http:
      paths:
      - pathType: Prefix
        path: "/app1"
        backend:
          service:
            name: web-service
            port: 
              number: 80
      - pathType: Prefix
        path: "/app2"
        backend:
          service:
            name: web-service
            port: 
              number: 80
